2009-01-28  Scott James Remnant  <scott@netsplit.com>

	* init/environ.c: Update documentation to match new nih_alloc()

	* init/tests/test_job_process.c (test_run): Check that trailing
	newlines are ignored when running a script (can verify r1025 is
	fixed with gdb)

	* init/tests/test_environ.c (test_expand): Add a test case for the
	bug fixed in r1027, the implicit case of the gap in the environment
	string being the same size as the value replacing it.

	* init/environ.c (environ_add): Use nih_local for new_str, making
	the code paths a little simpler and ensuring we pass something that
	can be referenced to nih_str_array_addp()

	* init/tests/test_event.c (test_new): Make sure that env is an
	orphan with TEST_ALLOC_ORPHAN.
	* init/tests/test_event_operator.c (test_operator_new): Make sure
	that env is an orphan with TEST_ALLOC_ORPHAN.
	(test_operator_copy): Drop pointless NULL parent check.

	* init/tests/test_control.c: Include limits.h

	* init/blocked.c (blocked_new): Take a reference to the message,
	otherwise it will be freed; we free the Blocked structure when we're
	done, so will automatically unref the message.
	* init/tests/test_blocked.c (test_new): Add tests to make sure the
	reference is taken.
	* init/tests/test_job.c (test_start, test_stop, test_restart):
	Make sure the message is referenced when an error is not returned
	but not referenced when one is.
	* init/tests/test_job_class.c (test_start, test_stop)
	(test_restart): Make sure the message is referenced when an error
	is not returned but not referenced when one is.
	* init/tests/test_control.c (test_emit_event): Make sure that
	the message is referenced.

	* init/tests/test_blocked.c: Change nih/dbus.h include to
	nih-dbus/dbus_message.h
	* init/tests/test_control.c: Change nih/dbus.h include to error,
	connection and object; include D-Bus test macros.
	* init/tests/test_job.c: Change nih/dbus.h include to error, message
	and object; include D-Bus test macros